src/objects/Broker__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_you_associated_with_any_other_Real_E__c</fullName>
        <label>Are you associated with any other Real E</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_of_Specialization__c</fullName>
        <label>Area of Specialization</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Associated_Company__c</fullName>
        <label>Specify Other Associated Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Code__c</fullName>
        <label>Channel Partner Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Id__c</fullName>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Channel Partner Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Broker_Name__c</fullName>
        <label>Channel Partner Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head Channel Partner</label>
        <referenceTo>Broker__c</referenceTo>
        <relationshipLabel>Database</relationshipLabel>
        <relationshipName>Brokers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brokerage_made_till_date__c</fullName>
        <label>Brokerage made till date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_of_Work__c</fullName>
        <label>City of Work</label>
        <picklist>
            <picklistValues>
                <fullName>Adilabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agartala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmedabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmednagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aizawl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ajmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akbarpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aligarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alipurduar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allahabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alwar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambikapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amravati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amritsar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amroha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantnag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asansol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aurangabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azamgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badgam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bagaha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahadurgarh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Name__c</fullName>
        <label>Contact Person Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_ID_creation__c</fullName>
        <label>Date of ID creation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deals_done_in_last_one_year__c</fullName>
        <label>Deals done in last one year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_ID__c</fullName>
        <label>Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Gujarati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sindhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marathi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muslim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marwari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bengali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Indian Hindu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Indian Hindu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Head_Broker_Name__c</fullName>
        <formula>Broker_lookup__r.Broker_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Head Channel Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Authorized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_UnderWriter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is UnderWriter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landline_Number__c</fullName>
        <label>Landline Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Churchgate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine Lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charni Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Road East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Road West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mahalaxmi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower Parel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elphinstone Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai CST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazgaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colaba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nariman Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malabar Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Girgaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breach Candy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haji Ali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kalbadevi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altamount Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babulnath Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhulabhai Desai Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhuleshwar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.P. Tank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuffe Parade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dongri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hughes Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kalachowki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kemps Corner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Master_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master</label>
        <referenceTo>Master__c</referenceTo>
        <relationshipName>Brokers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Micro_Market_Area__c</fullName>
        <label>Micro Market (Area)</label>
        <picklist>
            <picklistValues>
                <fullName>Andheri West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mira Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andheri East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malad West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dombivli East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goregaon East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kandivali East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virar West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulund West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chembur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borivali West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandra West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badlapur East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhandup West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kandivali West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kalyan West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goregaon West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandivali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghatkopar East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dahisar East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malad East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borivali East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulund East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santacruz East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virar East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghatkopar West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dombivli West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nature_of_Company__c</fullName>
        <label>Nature of Company</label>
        <picklist>
            <picklistValues>
                <fullName>IPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wealth management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual broker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housewife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Address__c</fullName>
        <label>Office Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Occupation__c</fullName>
        <inlineHelpText>If Primary occupation is &quot;other&quot; than fill up.</inlineHelpText>
        <label>Specify Other Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_Card_Number__c</fullName>
        <label>PAN Card Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pan_Card_No__c</fullName>
        <label>Pan Card No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Occupation__c</fullName>
        <label>Primary Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Real Estate Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profile_Description__c</fullName>
        <label>Profile Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Database</relationshipLabel>
        <relationshipName>Database</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Residential_Address__c</fullName>
        <label>Residential Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Name__c</fullName>
        <label>Sales Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M/S.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Number__c</fullName>
        <label>Service Tax Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Head_Name__c</fullName>
        <label>Site Head Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TDS_Party_Type__c</fullName>
        <label>TDS Party Type</label>
        <picklist>
            <picklistValues>
                <fullName>P0003-Domestic Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P0001-Non Company [Non-Resident]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P0002-Non Company [Resident]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P0004-Non Domestic Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Amount_of_Investment__c</fullName>
        <label>Total Amount of Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Area_Sold_Leased__c</fullName>
        <label>Total Area Sold/Leased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Outright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SubBroker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wealth Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM solution providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Materials Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Architects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Power Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caterers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shuttle Service Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverage Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NBFC&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Investors/ Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Investors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewellers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <picklist>
            <controllingField>Location__c</controllingField>
            <picklistValues>
                <fullName>South Mumbai (So Bo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Suburbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Suburbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Suburbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harbor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navi Mumbai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Database</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Channel Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Database</pluralLabel>
    <recordTypes>
        <fullName>Bankers</fullName>
        <active>true</active>
        <label>Bankers</label>
    </recordTypes>
    <recordTypes>
        <fullName>Broker</fullName>
        <active>false</active>
        <label>Broker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Channel_Partners</fullName>
        <active>true</active>
        <label>Channel Partners</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consultant</fullName>
        <active>true</active>
        <label>Consultant</label>
    </recordTypes>
    <recordTypes>
        <fullName>E_Clients</fullName>
        <active>false</active>
        <label>E Clients</label>
    </recordTypes>
    <recordTypes>
        <fullName>Existing_Record</fullName>
        <active>true</active>
        <label>Existing Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal</fullName>
        <active>false</active>
        <label>Legal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lenders</fullName>
        <active>true</active>
        <label>Lenders</label>
    </recordTypes>
    <recordTypes>
        <fullName>NBFC_s_PE_s</fullName>
        <active>false</active>
        <label>NBFC&apos;s/PE&apos;s</label>
    </recordTypes>
    <recordTypes>
        <fullName>Others</fullName>
        <active>true</active>
        <label>Others</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendors</fullName>
        <active>true</active>
        <label>Vendors</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Associated_Company</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISPICKVAL(Are_you_associated_with_any_other_Real_E__c, &quot;Yes&quot;), ISBLANK(Associated_Company__c))</errorConditionFormula>
        <errorDisplayField>Associated_Company__c</errorDisplayField>
        <errorMessage>Please enter Associated Company Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Broker_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(  Type__c , &apos;&apos;)  &amp;&amp;  NOT( ISBLANK( Broker_lookup__c ))</errorConditionFormula>
        <errorMessage>Please Select Subroker from the Broker type before Head Broker lookup</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Head_Broker_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Type__c, &apos;SubBroker&apos;), 
     ISBLANK(Broker_lookup__c))</errorConditionFormula>
        <errorDisplayField>Broker_lookup__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Occupation</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISPICKVAL( Primary_Occupation__c , &quot;Others&quot;), ISBLANK( Other_Occupation__c ))</errorConditionFormula>
        <errorDisplayField>Other_Occupation__c</errorDisplayField>
        <errorMessage>Please Fill up &quot;Other Occupation&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Broker</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(  Type__c , &quot;Broker&quot;)  &amp;&amp;  NOT( ISBLANK( Broker_lookup__c ))</errorConditionFormula>
        <errorMessage>Please Select the SubBroker Value from the Picklist</errorMessage>
    </validationRules>
</CustomObject>